# instagram-analysis

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: daily-account-insights.yml  new-posts-detection.yml  recent-post-sync.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/api/v1/: __init__.py  account_setup.py  accounts.py  collection.py  post_insights.py
backend/app/core/: database.py  records.py  supabase_utils.py
backend/app/repositories/: instagram_account_repository.py  instagram_daily_stats_repository.py  instagram_monthly_stats_repository.py  instagram_post_metrics_repository.py  instagram_post_repository.py
backend/app/services/api/: account_service.py  account_setup_service.py  post_insight_service.py
backend/app/services/data_collection/: daily_collector_service.py  data_aggregator_service.py  historical_collector_service.py  instagram_api_client.py  metrics_utils.py  recent_post_sync_service.py
backend/data/execution_state/: new_posts_last_execution.json
backend/scripts/: collect_daily_data.py  collect_historical_data.py  collect_historical_insights.py
backend/scripts/github_actions/: account_insights_collector.py  new_posts_collector.py
backend/scripts/github_actions/shared/: base_collector.py  post_detector.py  post_processor.py
docs/operation/: data-collection-guide.md
frontend/: .env.example  package-lock.json  package.json
frontend/src/app/: page.tsx  (+3 more)
supabase/: config.toml
supabase/migrations/: 20251216000000_init_instagram_analysis.sql
verification/: .env.example
(+18 files in other folders)
